models builder changes

--- a/UmbracoCalendarDemo.Web.UI/Views/Blog.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/Blog.cshtml
@@ -1,4 +1,4 @@
-﻿@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels
+﻿@using ContentModels = UmbracoCalendarDemo.Web.UmbracoModels
 
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.Blog>
 
