--- a/UmbracoCalendarDemo.Web.UI/Views/MacroPartials/FeaturedProducts.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/MacroPartials/FeaturedProducts.cshtml
@@ -1,4 +1,4 @@
-﻿@using Umbraco.Cms.Core.Models.PublishedContent
+﻿@using UmbracoCalendarDemo.Web.UmbracoModels
 @using Umbraco.Cms.Core.Routing
 @using Umbraco.Cms.Web.Common
 @using Umbraco.Extensions
