--- a/UmbracoCalendarDemo.Web.UI/Views/MacroPartials/LatestBlogposts.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/MacroPartials/LatestBlogposts.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Http
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels
+@using ContentModels = UmbracoCalendarDemo.Web.UmbracoModels
 @using Microsoft.AspNetCore.Mvc.Rendering
 @using Umbraco.Cms.Core.Routing
 @using Umbraco.Cms.Web.Common
