--- a/UmbracoCalendarDemo.Web.UI/Views/Products.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/Products.cshtml
@@ -1,6 +1,6 @@
-﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+﻿@using UmbracoCalendarDemo.Web.UmbracoModels;
 @using Umbraco.Extensions
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels;
+@using ContentModels = UmbracoCalendarDemo.Web.UmbracoModels;
 
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.Products>
 
