--- a/UmbracoCalendarDemo.Web.UI/Views/contact.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/contact.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Umbraco.SampleSite;
-@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels
+@using ContentModels = UmbracoCalendarDemo.Web.UmbracoModels
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.Contact>
 @{
     Layout = "master.cshtml";
