--- a/UmbracoCalendarDemo.Web.UI/Views/home.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/home.cshtml
@@ -1,6 +1,6 @@
 ﻿
 @using Umbraco.Extensions
-@using Umbraco.Cms.Web.Common.PublishedModels;
+@using UmbracoCalendarDemo.Web.UmbracoModels;
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<Home>
 @{
     Layout = "master.cshtml";
