--- a/UmbracoCalendarDemo.Web.UI/Views/master.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/master.cshtml
@@ -1,4 +1,4 @@
-﻿@using Umbraco.Cms.Web.Common.PublishedModels;
+﻿@using UmbracoCalendarDemo.Web.UmbracoModels;
 @using Umbraco.Extensions
 
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage
