--- a/UmbracoCalendarDemo.Web.UI/Views/Blogpost.cshtml
+++ b/UmbracoCalendarDemo.Web.UI/Views/Blogpost.cshtml
@@ -1,4 +1,4 @@
-﻿@using ContentModels = Umbraco.Cms.Web.Common.PublishedModels
+﻿@using ContentModels = UmbracoCalendarDemo.Web.UmbracoModels
 @using Microsoft.AspNetCore.Mvc.Rendering
 @using Umbraco.Extensions
 @inherits Umbraco.Cms.Web.Common.Views.UmbracoViewPage<ContentModels.Blogpost>
